--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@ menu:
 # - {name: 'people', url: '/people'}
 # - {name: 'publications', url: '/publications'}
 # - {name: 'courses', url: '/courses'}
-- {name: 'cv', url: '/cv'}
+# - {name: 'cv', url: '/cv'}
 # - {name: 'contact', url: '/contact'}
 
 # people:
